@@ -1,3 +1,7 @@
+2011-09-29 Stefan Bidigaray <stefanbidi@gmail.com>
+
+	* Source/CFBase.c: Continued work on CFAllocators.
+
 2011-09-28 Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Source/CFBundle.m: Do not try to use dlfcn.h on Windows.
